2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Include <sys/mman.h> for map.c generation.  Fixes #77091.

2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Always include 2nd parameter of [Obsolete] attributes; mark
	  the [DllImport]ed method with [Obsolete] if the underlying type is
	  [Obsolete].
	* NativeConvert.generated.cs: Flush.

2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Use UnixMarshal.PtrToStringUnix -- it's faster.

2005-11-28  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Prelink all SignalHandlers passed to Stdlib.signal().  This is
	  so that mono doesn't have to JIT the handler within signal context.

2005-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Implement IEquatable<FilePosition> for FilePosition.
	* Syscall.cs: Provide GetHashCode(), Equals(), operator==, operator!= for
	  all structure types.  Implement IEquatable<T> for all "value type" 
	  structs and classes.

2005-11-07  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: *xattr functions should use the FileNameMarshaler for filenames.

2005-11-07  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Always use ordinal string sorting behavior.  The string
	  collation sorting has changed, so to keep the mono/support diff sizes down
	  we have to explicitly specify the previous implicit ordering.

2005-11-02  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Remove [CLSCompliant(false)] when it isn't needed.

2005-11-02  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Use UnixMarshal.FreeHeap().  .Free() is obsolete.

2005-10-27  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Correct return type of setbuf(IntPtr, byte*).
	* Syscall.cs: Remove [Obsolete] SyslogFacility.LOG_USRE member
	  (Mono.Unix.Native hasn't shipped yet, so nobody is using it); correct
	  [Obsolete] comment for getpagesize().

2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Deal with UnixMarshal method name changes.
